# AGE2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dependencies.cmake  README.md  vcpkg.json
Editor/: AGEProfile-Runtime.json  AGEProfile-Shutdown.json  AGEProfile-Startup.json  AppConfig.ini  CMakeLists.txt  Editor.aps  Editor.rc  imgui.ini  resource.h
Editor/Assets/Aesprite/: example-kitten.aseprite  faustia prirmary posing.aseprite
Editor/Assets/Fonts/AGEFonts/: IBMPlexSans-Bold.AGEfont  IBMPlexSans-BoldItalic.AGEfont  IBMPlexSans-ExtraLight.AGEfont  IBMPlexSans-ExtraLightItalic.AGEfont  IBMPlexSans-Italic.AGEfont  IBMPlexSans-Light.AGEfont  IBMPlexSans-LightItalic.AGEfont  IBMPlexSans-Medium.AGEfont  IBMPlexSans-MediumItalic.AGEfont  IBMPlexSans-Regular.AGEfont  IBMPlexSans-SemiBold.AGEfont  IBMPlexSans-SemiBoldItalic.AGEfont  IBMPlexSans-Thin.AGEfont  IBMPlexSans-ThinItalic.AGEfont  NotoSansArabic-Black.AGEfont  NotoSansArabic-Bold.AGEfont  NotoSansArabic-ExtraBold.AGEfont  NotoSansArabic-ExtraLight.AGEfont  NotoSansArabic-Light.AGEfont  NotoSansArabic-Medium.AGEfont  NotoSansArabic-SemiBold.AGEfont  NotoSansArabic-Thin.AGEfont  NotoSansArabic-VariableFont_wdth,wght.AGEfont  NotoSansArabic_Condensed-Black.AGEfont  NotoSansArabic_Condensed-Bold.AGEfont  NotoSansArabic_Condensed-ExtraBold.AGEfont  NotoSansArabic_Condensed-ExtraLight.AGEfont  NotoSansArabic_Condensed-Light.AGEfont  NotoSansArabic_Condensed-Medium.AGEfont  NotoSansArabic_Condensed-Regular.AGEfont  NotoSansArabic_Condensed-SemiBold.AGEfont  NotoSansArabic_Condensed-Thin.AGEfont  NotoSansArabic_ExtraCondensed-Black.AGEfont  NotoSansArabic_ExtraCondensed-Bold.AGEfont  NotoSansArabic_ExtraCondensed-ExtraBold.AGEfont  NotoSansArabic_ExtraCondensed-ExtraLight.AGEfont  NotoSansArabic_ExtraCondensed-Light.AGEfont  NotoSansArabic_ExtraCondensed-Medium.AGEfont  NotoSansArabic_ExtraCondensed-Regular.AGEfont  NotoSansArabic_ExtraCondensed-SemiBold.AGEfont  (+59 more)
Editor/Assets/Movies/: Sequence 01.3gp
Editor/Assets/Shaders/GLSL/Geometry/: glGeometry.glsl
Editor/Assets/Shaders/GLSL/Vertex/: BatchShader.glsl  CircleShader.glsl  LineShader.glsl  QuadShader.glsl  TextShader.glsl
Editor/Assets/Shaders/HLSL/FX/: Bloom.hlsl
Editor/Assets/Shaders/HLSL/Fragment/: CirclePixelShader.hlsl  CubePixelShader.hlsl  CylinderPixelShader.hlsl  LinePixelShader.hlsl  PyramidPixelShader.hlsl  QuadPixelShader.hlsl  SpherePixelShader.hlsl  TextPixelShader.hlsl  TilePixelShader.hlsl
Editor/Assets/Shaders/HLSL/Vertex/: CircleVertexShader.hlsl  CubeVertexShader.hlsl  CylinderVertexShader.hlsl  LineVertexShader.hlsl  PyramidVertexShader.hlsl  SphereVertexShader.hlsl  TextVertexShader.hlsl  TileVertexShader.hlsl
Editor/Assets/Sounds/Banks/Desktop/: MCSounds.bank  Master.bank  Master.strings.bank
Editor/CMake/: Versioning.h.in
Editor/src/Editor_Core/Private/: AGEeditor.cpp  CodeGen.cpp  Database.cpp  EditorLayer.cpp  NewProjectLayer.cpp
Editor/src/Editor_Core/Public/: CodeGen.h  Database.h  EditorLayer.h  NewProjectLayer.h
Editor/src/Editor_ImGui/Private/: AssetRegistryWindow.cpp  ConsoleLog.cpp  ContentBrowserPanel.cpp  DatabaseWindow.cpp  Dockspace.cpp  InventoryDatabase.cpp  Panel.cpp  QuestManagerWindow.cpp  SceneHierarchyPanel.cpp  Toolbar.cpp  UiEditorWindow.cpp
Editor/src/Editor_ImGui/Public/: AssetRegistryWindow.h  ConsoleLog.h  ContentBrowserPanel.h  DatabaseWindow.h  Dockspace.h  InventoryDatabase.h  Panel.h  QuestManagerWindow.h  SceneHierarchyPanel.h  Toolbar.h  UiEditorWindow.h
Editor/src/MenuSystem/Private/: CreateProjectMenu.cpp  MainMenuBar.cpp
Editor/src/MenuSystem/Public/: CreateProjectMenu.h  MainMenuBar.h
Editor/src/Viewports/Private/: Viewport.cpp
Editor/src/Viewports/Public/: Viewport.h
Engine/: CMakeLists.txt
Engine/CMake/: Versioning.h.in
Engine/src/: Age.h
Engine/src/AGE/Animation/Private/: Animation.cpp
Engine/src/AGE/Animation/Public/: Animation.h
Engine/src/AGE/Assets/Private/: AssetManager.cpp
Engine/src/AGE/Assets/Public/: AssetManager.h
Engine/src/AGE/Camera/Private/: EditorCamera.cpp
Engine/src/AGE/Camera/Public/: Camera.h  EditorCamera.h
Engine/src/AGE/Core/Private/: AGEpch.cpp  App.cpp  DeviceManager.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  ScriptableComponentStack.cpp  UUID.cpp
Engine/src/AGE/Core/Public/: AGEpch.hpp  App.h  Buffer.h  Colors.h  Core.h  DeltaTime.h  DeviceManager.h  EntryPoint.h  GamepadCodes.h  Input.h  JoyStickCodes.h  Keycodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  Pointers.h  ScriptableComponentStack.h  Timer.h  UUID.h  Window.h  Wwise_IDs.h
Engine/src/AGE/Debug/Public/: Instrumentor.h
Engine/src/AGE/Events/Public/: ApplicationEvent.h  Event.h  GameEvent.h  KeyEvent.h  MouseEvent.h  RendererEvent.h  UIEvent.h
Engine/src/AGE/ImGui/Private/: ImGuiLayer.cpp
Engine/src/AGE/ImGui/Public/: ImGuiLayer.h
Engine/src/AGE/Math/Private/: Math.cpp  UtilityFunctions.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Engine/src/AGE/Math/Public/: Math.h  MathStructures.h  UtilityFunctions.h  Vector2.h  Vector3.h  Vector4.h
Engine/src/AGE/Parser/Private/: CsvParser.cpp  FbxParser.cpp  JsonParser.cpp
Engine/src/AGE/Parser/Public/: CsvParser.h  FbxParser.h  JsonParser.h
Engine/src/AGE/Particles/Private/: ParticleSystem.cpp
Engine/src/AGE/Particles/Public/: ParticleSystem.h
Engine/src/AGE/Physics/Private/: Physics2D.cpp  World.cpp  World2D.cpp
Engine/src/AGE/Physics/Public/: Physics2D.h  World.h  World2D.h
Engine/src/AGE/Project/Private/: Project.cpp
Engine/src/AGE/Project/Public/: Project.h
Engine/src/AGE/RNG/Private/: RNG.cpp
Engine/src/AGE/RNG/Public/: RNG.h
Engine/src/AGE/Render/Private/: Font.cpp  FrameBuffer.cpp  GraphicsContext.cpp  Pipeline.cpp  RenderAPI.cpp  RenderBuffer.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  (+1 more)
Game/: CMakeLists.txt  imgui.ini
Game/CMake/: Versioning.h.in
Game/src/: GameFramework.h
Game/src/Base/Private/: Dockspace.cpp  Game.cpp  GameLayer.cpp  GameViewport.cpp  UiLayer.cpp
Game/src/Base/Public/: Dockspace.h  GameLayer.h  GameViewport.h  UiLayer.h
(+155 files in other folders)
